--- a/sass/baseline/_quotes.variables.scss
+++ b/sass/baseline/_quotes.variables.scss
@@ -1,6 +1,6 @@
-$baseTextQuotes: "\201C""\201D""\2018""\2019";
-$baseQuoteBorder: 10px solid $colorNeutralLighter;
-$smallQuoteBorder: 5px solid $colorNeutralLight;
+$baseTextQuotes: "\201C""\201D""\2018""\2019" !default;
+$baseQuoteBorder: 10px solid $colorNeutralLighter !default;
+$smallQuoteBorder: 5px solid $colorNeutralLight !default;
 
 $quotesVarMap: (
     "baseTextQuotes": $baseTextQuotes,
