--- a/sass/baseline/textSizes.variables.scss
+++ b/sass/baseline/textSizes.variables.scss
@@ -1,21 +1,21 @@
 
-$baseLineHeight: 1.618;
-$smallLineHeight: 1.2;
+$baseLineHeight: 1.618 !default;
+$smallLineHeight: 1.2 !default;
 
 $lineHeightVarMap: (
     "baseLineHeight": $baseLineHeight,
     "smallLineHeight": $smallLineHeight
 );
 
-$baseFontSize: 1rem;
+$baseFontSize: 1rem !default;
 
-$baseTextSize: 1 * $baseFontSize;
-$biggestTextSize:  1.3 * $baseTextSize;
-$biggerTextSize: 1.2 * $baseTextSize;
-$bigTextSize: 1.1 * $baseTextSize;
-$smallTextSize: .8 * $baseTextSize;
-$smallerTextSize: .75 * $baseTextSize;
-$smallestTextSize: .618 * $baseTextSize;
+$baseTextSize: 1 * $baseFontSize !default;
+$biggestTextSize:  1.3 * $baseTextSize !default;
+$biggerTextSize: 1.2 * $baseTextSize !default;
+$bigTextSize: 1.1 * $baseTextSize !default;
+$smallTextSize: .8 * $baseTextSize !default;
+$smallerTextSize: .75 * $baseTextSize !default;
+$smallestTextSize: .618 * $baseTextSize !default;
 
 $textSizeVarMap: (
     "baseTextSize": $baseTextSize,
@@ -27,12 +27,12 @@ $textSizeVarMap: (
     "smallestTextSize": $smallestTextSize,
 );
 
-$baseTitleSize: 1.5em;
-$biggestTitleSize: 2.617924em;
-$bigTitleSize: 1.618em;
-$smallTitleSize: $biggestTextSize;
-$smallerTitleSize: $biggerTextSize;
-$smallestTitleSize: $bigTextSize;
+$baseTitleSize: 1.5em !default;
+$biggestTitleSize: 2.617924em !default;
+$bigTitleSize: 1.618em !default;
+$smallTitleSize: $biggestTextSize !default;
+$smallerTitleSize: $biggerTextSize !default;
+$smallestTitleSize: $bigTextSize !default;
 
 $titleSizeVarMap: (
     "baseTitleSize": $baseTitleSize,
